; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-at91.c_ohci_at91_usb_get_power.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_ohci-at91.c_ohci_at91_usb_get_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at91_usbh_data = type { i32* }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.at91_usbh_data*, i32)* @ohci_at91_usb_get_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ohci_at91_usb_get_power(%struct.at91_usbh_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.at91_usbh_data*, align 8
  %5 = alloca i32, align 4
  store %struct.at91_usbh_data* %0, %struct.at91_usbh_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @valid_port(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @EINVAL, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %3, align 4
  br label %21

12:                                               ; preds = %2
  %13 = load %struct.at91_usbh_data*, %struct.at91_usbh_data** %4, align 8
  %14 = getelementptr inbounds %struct.at91_usbh_data, %struct.at91_usbh_data* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @gpiod_get_value(i32 %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %12, %9
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @valid_port(i32) #1

declare dso_local i32 @gpiod_get_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
